# rkernel

./: .gitignore  .gitmodules  Cargo.toml  README.md  asm.rs  ata.rs  build.sh  cpuid.rs  font.rs  fpu.rs  graphics.rs  idt.rs  install.sh  keyboard.rs  main.rs  mem.rs  mouse.rs  pic.rs  pspeaker.rs  rdtsc.rs  rtc.rs  sb16.rs  vga.rs
.cargo/: config
amd64/: Cargo.toml  main.rs  mem.rs  mouse.rs  pci.rs  rtc.rs  sb16.rs  serial.rs
amd64/boot/: boot.asm  grub.cfg  long_mode_start.asm
boot/: boot.asm  multiboot_header.asm
riscv64/: Cargo.toml  linker.ld  main.rs  rkernel_riscv
riscv64/.cargo/: config
riscv64/boot/: boot.s  trap.s
