[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
vga = "0.2.6"
ryu = "1.0"
multiboot2 = "0.10.1"
x86_64 = "0.14.0"
lazy_static = { version = "1.0", features = ["spin_no_std"] }
spin = "0.5.2"
ps2-mouse = { version = "0.1.3", path = "./ps2-mouse" } 
wee_alloc = { version = "0.4.5", features = ["static_array_backend"] }
bit_field = "0.10.1"
# TODO:
# ext2 = { path ="./ext2-rs" }

[lib]
crate-type = ["staticlib"]
path = "main.rs"
